--- a/MVVMPexeso/MVVMPexeso/MainWindow.xaml
+++ b/MVVMPexeso/MVVMPexeso/MainWindow.xaml
@@ -19,24 +19,8 @@
             <Button Margin="20 10"  Command="{Binding StartCommand}" >Start Game</Button>
             <Label HorizontalAlignment="Center">Score:</Label>
             <Label HorizontalAlignment="Center" FontSize="40" Foreground="Green" Content="{Binding Score}"/>
-            <Slider x:Name="BoardSizeSlider" Margin="5,0,5,0" SmallChange="1" Minimum="{Binding MIN_FIELD_SIZE}" Maximum="{Binding MAX_FIELD_SIZE}" TickPlacement="BottomRight" AutoToolTipPlacement="TopLeft">
-                <behaviors:Interaction.Triggers>
-                    <behaviors:EventTrigger EventName="ValueChanged">
-                        <behaviors:InvokeCommandAction 
-                Command="{Binding BoardSizeChangedCommand}" 
-                CommandParameter="{Binding Value, ElementName=BoardSizeSlider}" />
-                    </behaviors:EventTrigger>
-                </behaviors:Interaction.Triggers>
-            </Slider>
-            <Slider x:Name="PlayerCountSlider" Margin="5,0,5,0" SmallChange="1" Minimum="{Binding MIN_PLAYERS}" Maximum="{Binding MAX_PLAYERS}" TickPlacement="BottomRight" AutoToolTipPlacement="TopLeft">
-                <behaviors:Interaction.Triggers>
-                    <behaviors:EventTrigger EventName="ValueChanged">
-                        <behaviors:InvokeCommandAction 
-    Command="{Binding PlayerCountChangedCommand}" 
-    CommandParameter="{Binding Value, ElementName=PlayerCountSlider}" />
-                    </behaviors:EventTrigger>
-                </behaviors:Interaction.Triggers>
-            </Slider>
+            <Slider x:Name="BoardSizeSlider" Margin="5,0,5,0" SmallChange="1" Minimum="{Binding MIN_FIELD_SIZE}" Maximum="{Binding MAX_FIELD_SIZE}" TickPlacement="BottomRight" AutoToolTipPlacement="TopLeft" Value="{Binding BoardSize, UpdateSourceTrigger=PropertyChanged}" />
+            <Slider x:Name="PlayerCountSlider" Margin="5,0,5,0" SmallChange="1" Minimum="{Binding MIN_PLAYERS}" Maximum="{Binding MAX_PLAYERS}" TickPlacement="BottomRight" AutoToolTipPlacement="TopLeft" Value="{Binding PlayerCount, UpdateSourceTrigger=PropertyChanged}" />
         </StackPanel>
 
         <ItemsControl ItemsSource="{Binding UISquares}" Grid.Column="1">
