--- a/MVVMPexeso/MVVMPexeso/MainWindow.xaml
+++ b/MVVMPexeso/MVVMPexeso/MainWindow.xaml
@@ -17,10 +17,21 @@
         <StackPanel>
             <Label FontSize="50" HorizontalAlignment="Center">Gridlock</Label>            
             <Button Margin="20 10"  Command="{Binding StartCommand}" >Start Game</Button>
+            <Button Margin="20 10"  Command="{Binding EndCommand}" >End Game</Button>
             <Label HorizontalAlignment="Center">Score:</Label>
             <Label HorizontalAlignment="Center" FontSize="40" Foreground="Green" Content="{Binding Score}"/>
+            <Label HorizontalAlignment="Center" FontSize="16" >Board size</Label>
             <Slider x:Name="BoardSizeSlider" Margin="5,0,5,0" SmallChange="1" Minimum="{Binding MIN_FIELD_SIZE}" Maximum="{Binding MAX_FIELD_SIZE}" TickPlacement="BottomRight" AutoToolTipPlacement="TopLeft" Value="{Binding BoardSize, UpdateSourceTrigger=PropertyChanged}" />
+            <Label HorizontalAlignment="Center" FontSize="16">Number of players</Label>
             <Slider x:Name="PlayerCountSlider" Margin="5,0,5,0" SmallChange="1" Minimum="{Binding MIN_PLAYERS}" Maximum="{Binding MAX_PLAYERS}" TickPlacement="BottomRight" AutoToolTipPlacement="TopLeft" Value="{Binding PlayerCount, UpdateSourceTrigger=PropertyChanged}" />
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="3*"/>
+                </Grid.ColumnDefinitions>
+                <CheckBox x:Name="RTSToggle" Margin="8, 0, 8, 0" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Center" IsChecked="{Binding RTSMode}" IsEnabled="False"></CheckBox>
+                <Label FontSize="16" Grid.ColumnSpan="2" VerticalAlignment="Center" HorizontalAlignment="Center">RTS gamemode</Label>
+            </Grid>
         </StackPanel>
 
         <ItemsControl ItemsSource="{Binding UISquares}" Grid.Column="1">
